--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jawdev-react-demo-components-example",
+  "name": "@jaw-dev/react-demo-components-example",
   "homepage": ".",
   "version": "0.0.0",
   "private": true,
