--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "@jaw-dev/react-demo-components",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "React components for GitHub pages",
   "author": "jawittdesigns",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:JAW-Dev/jawdev-react-demo-components.git"
-  },
+  "repository": { "url": "jaw-dev.github.io/jawdev-react-demo-components" },
   "homepage": "https://jaw-dev.github.io/jawdev-react-demo-components/",
   "publishConfig": {
     "access": "public"
