--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "ES2017",
+    "target": "ESNext",
     "module": "esnext",
     "lib": [
       "dom",
