--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaw-dev/react-demo-components",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "React components for GitHub pages",
   "author": "jawittdesigns",
   "license": "MIT",
@@ -63,6 +63,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
+    "styled-components": "^5.2.1",
     "typescript": "^3.7.5"
   },
   "files": [
@@ -74,7 +75,6 @@
     "@types/radium": "^0.24.3",
     "@types/styled-components": "^5.1.7",
     "html-react-parser": "^1.0.0",
-    "prismjs": "^1.22.0",
-    "styled-components": "^5.2.1"
+    "prismjs": "^1.22.0"
   }
 }
